[package]
name = "khal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Hardware abstraction layer, provides unified APIs for platform-specific operations"

[features]
default = []
smp = ["kplat/smp",]
fp-simd = ["kcpu/fp-simd",]
rtc = []
nmi = ["kplat/nmi"]
pmu = []
paging = ["dep:kalloc", "dep:page_table"]
tls = ["kcpu/tls"]
uspace = ["paging", "kcpu/uspace"]
crosvm = []

ipi = []
irq = []

[dependencies]
kalloc = { workspace = true, optional = true }
kcpu = { workspace = true }
kplat.workspace = true
cfg-if.workspace = true
heapless = "0.9"
kspin.workspace = true
lazyinit.workspace = true
linkme = { version = "0.3.33" }
log.workspace = true
memaddr.workspace = true
page_table = { workspace = true, optional = true }
percpu.workspace = true
fdt-parser = "0.4"
unittest.workspace = true


[build-dependencies]
kbuild_config.workspace = true
