[package]
name = "kipi"
version.workspace = true
edition.workspace = true
authors = ["KylinSoft Co., Ltd. <https://www.kylinos.cn/>"]
description = "X-Kernel Inter-Processor Communication API"
license.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
platconfig.workspace = true
khal = { workspace = true, features = ["ipi"] }
kspin.workspace = true
lazyinit.workspace = true
log.workspace = true
percpu.workspace = true
