[package]
name = "kipi"
description = "X-Kernel Inter-Processor Communication API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
platconfig.workspace = true
khal = { workspace = true, features = ["ipi"] }
kspin.workspace = true
lazyinit.workspace = true
log.workspace = true
percpu.workspace = true
