[package]
name = "axruntime"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>", 
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>"
    ]
description = "Runtime library of ArceOS"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axruntime"
documentation = "https://arceos-org.github.io/arceos/axruntime/index.html"

[features]
default = []

smp = ["khal/smp", "axtask/smp"]
alloc = ["dep:kalloc"]
paging = ["khal/paging", "dep:axmm"]
ipi = ["dep:kipi"]

fs = ["dep:axdriver", "dep:axfs"]
net = ["dep:axdriver", "dep:axnet"]
display = ["dep:axdriver", "dep:fbdevice"]
input = ["dep:axdriver", "dep:inputdev"]
vsock = ["net", "dep:axdriver"]
rtc = []
# driver-dyn = ["axdriver/dyn"]
crosvm = ["vsock", "axfs/crosvm"]
watchdog = ["dep:axwatchdog"]
pmu = ["khal/pmu"]

[dependencies]
kalloc = { workspace = true, optional = true }
backtrace.workspace = true
platconfig.workspace = true
fbdevice = { workspace = true, optional = true }
axdriver = { workspace = true, optional = true }
inputdev = { workspace = true, optional = true }
axfs = { workspace = true, optional = true }
khal.workspace = true
kipi = { workspace = true, optional = true }
klogger.workspace = true
axmm = { workspace = true, optional = true }
axnet = { workspace = true, optional = true }
kplat = { workspace = true }
axtask = { workspace = true }
axwatchdog = { workspace = true, optional = true }
chrono.workspace = true
crate_interface.workspace = true
ctor_bare.workspace = true
indoc = "2"
percpu.workspace = true
