[package]
name = "kpoll"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
description = "A library for polling I/O events and waking up tasks."

[features]
stats = []
default = []

[dependencies]
bitflags = { version = "2.10", default-features = false }
linux-raw-sys = { version = "0.11", default-features = false, features = [
    "no_std",
    "general",
] }
kspin = { workspace = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
