[package]
name = "ksync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "x-kernel synchronization primitives"

[features]
default = []
watchdog = ["dep:khal"]
stats = []

[dependencies]
ktask.workspace = true
event-listener.workspace = true
kspin.workspace = true
lock_api.workspace = true
khal = { workspace = true, optional = true}

[dev-dependencies]
ksync = { workspace = true }
ktask = { workspace = true, features = ["test"] }
# FIXME: `rand` crate can not be used since https://github.com/google/zerocopy/pull/2574
fastrand = "2.3"
