[package]
name = "ksync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "x-kernel synchronization primitives"

[features]
default = []
watchdog = ["dep:khal"]
stats = []

[dependencies]
ktask.workspace = true
event-listener.workspace = true
kspin.workspace = true
lock_api.workspace = true
khal = { workspace = true, optional = true }
unittest = { workspace = true}
