[package]
name = "ktask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "x-kernel task management module"

[features]
default = []

watchdog = ["dep:backtrace"]
task-ext = ["dep:extern-trait"]
tls = ["khal/tls"]
preempt = ["percpu/preempt", "kspin/preempt"]
smp = ["kspin/smp"]

sched-fifo = []
sched-rr = ["preempt"]
sched-cfs = ["preempt"]

test = ["percpu/sp-naive"]

[dependencies]
platconfig = { workspace = true }
axerrno.workspace = true
khal.workspace = true
backtrace = { workspace = true, optional = true }
kpoll = { workspace = true }
axsched = { version = "0.3" }
cfg-if.workspace = true
cpumask = { version = "0.1" }
crate_interface = { workspace = true }
event-listener = { workspace = true }
extern-trait = { version = "0.2", optional = true }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "async-await-macro",
] }
kspin = { workspace = true }
lazyinit = { workspace = true }
log = { workspace = true }
memaddr = { workspace = true }
percpu = { workspace = true }
kplat = { workspace = true }

[dev-dependencies]
khal = { workspace = true, features = ["fp-simd"] }
ktask = { workspace = true, features = ["test"] }
