[package]
name = "arm-gic"
description = "Specialized ARM Generic Interrupt Controller driver optimized for x-kernel."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies.bitflags]
version = "2.1.0"
