[package]
name = "axdriver"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "ChengXiang Qi <kuangjux@outlook.com>",
    "KylinSoft Co., Ltd. <https://www.kylinos.cn/>",
]
description = "ArceOS device drivers"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axdriver"
documentation = "https://arceos-org.github.io/arceos/axdriver/index.html"

[features]
bus-mmio = []
bus-pci = ["dep:pci", "dep:khal", "dep:platconfig"]
pci-mmio = ["bus-pci"]
net = ["dep:net"]
block = ["dep:block"]
display = ["dep:display"]
input = ["dep:input"]
vsock = ["dep:vsock"]

crosvm = ["pci-mmio", "dep:hashbrown", "dep:ksync", "dep:spin"]

# Enabled by features `virtio-*`
virtio = ["dep:virtio", "dep:kalloc", "dep:khal", "dep:platconfig"]

# various types of drivers
virtio-blk = ["block", "virtio", "virtio/block"]
virtio-net = ["net", "virtio", "virtio/net"]
virtio-gpu = ["display", "virtio", "virtio/gpu"]
virtio-input = ["input", "virtio", "virtio/input"]
virtio-socket = ["vsock", "virtio", "virtio/socket"]
ramdisk = ["block", "block/ramdisk"]
bcm2835-sdhci = ["block", "block/bcm2835-sdhci"]
sdmmc = ["block", "block/sdmmc", "dep:khal", "dep:platconfig"]
ahci = ["block", "block/ahci", "dep:khal", "dep:platconfig"]
# ixgbe = ["net", "net/ixgbe", "dep:axalloc", "dep:khal", "dep:axdma"]
# fxmac = ["net", "net/fxmac", "dep:axalloc", "dep:khal", "dep:axdma"]
# more devices example: e1000 = ["net", "net/e1000"]

default = ["bus-pci"]

[dependencies]
kalloc = { workspace = true, optional = true }
platconfig = { workspace = true, optional = true }
# axdma = { workspace = true, optional = true }
driver_base = { workspace = true }
block = { workspace = true, optional = true }
display = { workspace = true, optional = true }
input = { workspace = true, optional = true }
net = { workspace = true, optional = true }
pci = { workspace = true, optional = true }
vsock = { workspace = true, optional = true }
virtio = { workspace = true, optional = true }
axerrno = { workspace = true, optional = true }
khal = { workspace = true, optional = true }
# axmm = { workspace = true, optional = true }
cfg-if.workspace = true
crate_interface.workspace = true
dma-api = { version = "0.5", features = ["alloc"], optional = true }
log.workspace = true
memaddr = { workspace = true, optional = true }
rdif-block = { version = "0.6.2", optional = true }
rdif-intc = { version = "0.12", optional = true }
rdrive = { version = "0.18", optional = true }
smallvec = { version = "1.15", features = ["const_generics", "union"] }
spin = { version = "0.10", optional = true }

ksync = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
[target.'cfg(target_arch = "aarch64")'.dependencies]
arm-gic-driver = { version = "0.15", optional = true }
