[package]
name = "axdriver_virtio"
edition.workspace = true
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `driver_base` series crates"
documentation = "https://arceos-org.github.io/axdriver_crates/axdriver_virtio"
keywords = ["arceos", "driver", "vritio"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
alloc = ["virtio-drivers/alloc"]
block = ["dep:block"]
gpu = ["alloc", "axdriver_display"]
input = ["alloc", "dep:input"]
net = ["alloc", "axdriver_net"]
socket = ["alloc", "vsock"]

[dependencies]
driver_base = { workspace = true }
block = { workspace = true, optional = true }
axdriver_display = { workspace = true, optional = true }
input = { workspace = true, optional = true }
axdriver_net = { workspace = true, optional = true }
vsock = { workspace = true, optional = true }
log = { workspace = true }
virtio-drivers = { version = "0.7.4", default-features = false }
