[package]
name = "kdriver"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "device drivers for x-kernel"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
bus-mmio = []
bus-pci = ["dep:pci", "dep:khal"]
pci-mmio = ["bus-pci"]
net = ["dep:net"]
block = ["dep:block"]
display = ["dep:display"]
input = ["dep:input"]
vsock = ["dep:vsock"]

crosvm = ["pci-mmio", "dep:hashbrown", "dep:ksync"]
sev = ["pci-mmio", "kdma/sev", "dep:hashbrown", "dep:ksync"]

# Enabled by features `virtio-*`
virtio = ["dep:virtio", "dep:kalloc", "dep:khal"]

virtio-blk = ["block", "virtio", "virtio/block"]
virtio-net = ["net", "virtio", "virtio/net"]
virtio-gpu = ["display", "virtio", "virtio/gpu"]
virtio-input = ["input", "virtio", "virtio/input"]
virtio-socket = ["vsock", "virtio", "virtio/socket"]
ramdisk = ["block", "block/ramdisk"]
# bcm2835-sdhci = ["block", "block/bcm2835-sdhci"]
# sdmmc = ["block", "block/sdmmc", "dep:khal" ]
# ahci = ["block", "block/ahci", "dep:khal" ]

default = ["bus-pci"]

[dependencies]
kalloc = { workspace = true, optional = true }
kdma.workspace = true
driver_base = { workspace = true }
block = { workspace = true, optional = true }
display = { workspace = true, optional = true }
input = { workspace = true, optional = true }
net = { workspace = true, optional = true }
pci = { workspace = true, optional = true }
vsock = { workspace = true, optional = true }
virtio = { workspace = true, optional = true }
kerrno = { workspace = true, optional = true }
khal = { workspace = true, optional = true }
cfg-if.workspace = true
crate_interface.workspace = true
dma-api = { version = "0.5", features = ["alloc"], optional = true }
log.workspace = true
memaddr = { workspace = true, optional = true }
rdif-block = { version = "0.6.2", optional = true }
rdif-intc = { version = "0.12", optional = true }
rdrive = { version = "0.18", optional = true }
smallvec = { version = "1.15", features = ["const_generics", "union"] }

ksync = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
kbuild_config = { workspace = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm-gic-driver = { version = "0.15", optional = true }
