[package]
name = "virtio"
edition.workspace = true
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `driver_base` series crates"
documentation.workspace = true
keywords = ["x-kernel", "driver", "virtio"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
alloc = ["virtio-drivers/alloc"]
block = ["dep:block"]
gpu = ["alloc", "display"]
input = ["alloc", "dep:input"]
net = ["alloc", "dep:net"]
socket = ["alloc", "dep:vsock"]

[dependencies]
driver_base = { workspace = true }
block = { workspace = true, optional = true }
display = { workspace = true, optional = true }
input = { workspace = true, optional = true }
net = { workspace = true, optional = true }
vsock = { workspace = true, optional = true }
log = { workspace = true }
virtio-drivers.workspace = true
unittest = { workspace = true }
zerocopy = "0.8"
