[package]
name = "vsock"
edition.workspace = true
description = "Common traits and types for vsock drivers"
keywords = ["x-kernel", "driver", "vsock"]
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
driver_base.workspace = true
log.workspace = true
