[package]
name = "fs-ng-vfs"
description = "Virtual filesystem layer for x-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
kerrno = { workspace = true}
kpoll = { workspace = true }
bitflags = "2.10"
cfg-if = "1"
hashbrown = "0.15"
inherit-methods-macro = "0.1"
log = "0.4"
smallvec = "1.15"
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }
