[package]
name = "kfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "filesystem module"
license.workspace = true
homepage.workspace = true

[features]
default = []
use-ramdisk = []           # TODO: init ramdisk
fat = ["dep:fatfs"]
ext4 = ["dep:rsext4"]
times = []
std = []
crosvm = []

[dependencies]
kalloc = { workspace = true }
alloc-engine = { workspace = true }
kdriver = { workspace = true, features = ["block"] }
kerrno = { workspace = true }
fs-ng-vfs = { workspace = true }
khal = { workspace = true }
kio = { workspace = true, features = ["alloc"] }
kpoll = { workspace = true }
ksync = { workspace = true }
bitflags = "2.10"
cfg-if = { workspace = true }
chrono = { workspace = true }
intrusive-collections = "0.9.7"
kspin = { workspace = true }
log = { workspace = true }
lru = "0.16.0"
scope-local = { workspace = true }
slab = { version = "0.4.9", default-features = false }
unittest = { workspace = true}
ktypes = { workspace = true }

[dependencies.rsext4]
workspace = true
optional = true

[dependencies.fatfs]
workspace = true
default-features = false
optional = true
features = ["alloc", "lfn", "log_level_trace", "unicode"]

[dev-dependencies]
kdriver = { workspace = true, features = ["block", "ramdisk"] }
env_logger = "0.11.8"
