[package]
name = "kruntime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Runtime library of X-kernel"

[features]
default = []

smp = ["khal/smp", "ktask/smp"]
alloc = ["dep:kalloc"]
paging = ["khal/paging", "dep:memspace"]
ipi = ["dep:kipi"]

display = ["dep:kdriver", "dep:fbdevice"]
input = ["dep:kdriver", "dep:inputdev"]
fs = ["dep:kdriver", "dep:kfs"]
net = ["dep:kdriver", "dep:knet"]
vsock = ["net", "dep:kdriver"]

rtc = []
# driver-dyn = ["kdriver/dyn"]
crosvm = ["vsock", "kfs/crosvm"]
watchdog = ["dep:watchdog"]
pmu = ["khal/pmu"]

[dependencies]
kalloc = { workspace = true, optional = true }
backtrace.workspace = true
kerrno.workspace = true
fbdevice = { workspace = true, optional = true }
# display = { workspace = true, optional = true }
inputdev = { workspace = true, optional = true }
kdriver = { workspace = true, optional = true }
kdma.workspace = true
memaddr.workspace = true
kfs = { workspace = true, optional = true }
khal.workspace = true
kipi = { workspace = true, optional = true }
klogger.workspace = true
memspace = { workspace = true, optional = true }
knet = { workspace = true, optional = true }
kplat = { workspace = true }
ktask = { workspace = true }
watchdog = { workspace = true, optional = true }
chrono.workspace = true
crate_interface.workspace = true
kinit_setup.workspace = true
indoc = "2"
percpu.workspace = true
kbuild_config = { workspace = true }
