[package]
name = "axdma"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
alloc-engine.workspace = true
axalloc.workspace = true
platconfig.workspace = true
axerrno.workspace = true
khal = { workspace = true, features = ["paging"] }
axmm.workspace = true
kspin.workspace = true
log.workspace = true
memaddr.workspace = true
